# kita-menu

./: LICENSE  README.md  cloudbuild.yaml
menu-recognizer/: .dockerignore  Dockerfile  Pipfile  cloudbuild.yaml  main.py  recognizer.py
schema/: README.md  pyproject.toml
schema/schema/: menuitem.py
skill/: .gitignore  Dockerfile  Pipfile  cloudbuild.yaml  intendhandlers.py  main.py
webapp/: .gitignore  Pipfile  cloudbuild.yaml  main.py  pyproject.toml
webapp/templates/: base.html  index.html  login.html
webapp/webapp/: main.py
webapp/webapp/templates/: index.html  login.html
