[tool.poetry]
name = "schema"
version = "0.1.0"
description = ""
authors = ["Amjad Saadeh <mail@amjadsaadeh.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.12"
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
